--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "plugins": ["react", "react-hooks", "jsx-a11y", "import"],
+  "extends": ["next/core-web-vitals", "prettier"],
+  "rules": {
+    "global-require": "off",
+    "no-unused-expressions": ["error", { "allowTaggedTemplates": true }]   
+  }
 }
