--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.5"
+    "@types/node": "^17.0.30",
+    "@types/react": "^18.0.8",
+    "eslint": "^8.14.0",
+    "eslint-config-next": "12.1.5",
+    "eslint-config-prettier": "^8.5.0",
+    "typescript": "^4.6.4"
   }
 }
